# hawkes-tools

./: .gitignore  AGENT_PROMPT_REMAINING_PORT_AND_RENAME.md  Hawkes_Kernel_Estimation.ipynb  PARITY.md  README.md  pyproject.toml
benchmarks/: benchmark_numba_hot_paths.py
docs/: api-overview.md  datasets.md  index.md  installation.md  maintenance.md  validation.md
examples/: fit_exp_kernel.py  gallery_reproduction.ipynb  hawkes_time_rescaling_gof.ipynb  plot_hawkes_adm4.py  plot_hawkes_conditional_law.py  plot_hawkes_cumulants_matching.py  plot_hawkes_em.py  plot_hawkes_estimated_intensity.py  plot_hawkes_simulation.py  plot_poisson_simulation.py  tick_gallery_reproduction.ipynb
examples/saved_runs/: mixed_hawkes_1real_100000jumps_seed5000.json  mixed_hawkes_1real_100000jumps_seed5000.npz
src/hawkes_tools/: __init__.py  base.py  linear_model.py  metrics.py  optim.py  plot.py  prox.py  random.py  robust.py  simulation.py  solver.py
tests/: test_array.py  test_base.py  test_base_model.py  test_conditional_law_marked.py  test_core.py  test_datasets.py  test_gallery_notebook.py  test_hawkes_public_behavior.py  test_hawkes_reference_behavior.py  test_hinge_models.py  test_linear_model.py  test_nonparametric_public_behavior.py  test_nonparametric_tick_behavior.py  test_numba_learner_equivalence.py  test_numba_numeric_equivalence.py  test_optim.py  test_plot_public.py  test_plot_stems.py  test_preprocessing.py  test_prox_public.py  test_random.py  test_rkhs_estimator.py  test_robust_models.py  test_simulation_helpers.py  test_simulation_parity.py  test_solver_public.py  test_survival_robust_metrics.py  test_tick_compat.py  test_tick_gallery_notebook.py  test_tick_public_behavior.py
tests/hawkes_equivalence/: README.md  frozen_hawkes_reference_tests.txt  gap_registry.py  report_equivalence.py  test_conditional_law_parity.py  test_cumulant_matching_parity.py  test_equivalence_ledger.py  test_hawkes_em_parity.py  test_parametric_learners_parity.py  test_simulation_stochastic_parity.py  test_sumgaussians_basis_parity.py
(+144 files in other folders)
