[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hawkes-tools"
version = "0.1.0"
description = "Pure-Python Hawkes and point-process tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "scipy>=1.13",
  "matplotlib>=3.8",
  "numba>=0.60",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
torch = [
  "torch",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hawkes_tools.datasets" = [
  "vendor/tick-datasets/README.md",
  "vendor/tick-datasets/binary/adult/*.bz2",
  "vendor/tick-datasets/binary/covtype/*.bz2",
  "vendor/tick-datasets/binary/ijcnn1/*.bz2",
  "vendor/tick-datasets/binary/kdd2010/*.bz2",
  "vendor/tick-datasets/binary/reuters/*.bz2",
  "vendor/tick-datasets/hawkes/bund/*.npz",
  "vendor/tick-datasets/regression/abalone/*.bz2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

